--- a/index.ipynb
+++ b/index.ipynb
@@ -366,7 +366,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the NewDriver class\n"
+    "# Define the NewDriver class\n",
+    "class NewDriver:\n",
+    "    \n",
+    "    def pass"
    ]
   },
   {
