Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,7 +369,12 @@
     "# Define the NewDriver class\n",
     "class NewDriver:\n",
     "    \n",
-    "    def pass"
+    "    def passenger_names():\n",
+    "        def passenger_names(self):\n",
+    "        names = []\n",
+    "        for passenger in self.passengers:\n",
+    "            names.append(passenger.name)\n",
+    "        return names"
    ]
   },
   {
