Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,12 +369,7 @@
     "# Define the NewDriver class\n",
     "class NewDriver:\n",
     "    \n",
-    "    def passenger_names():\n",
-    "        def passenger_names(self):\n",
-    "        names = []\n",
-    "        for passenger in self.passengers:\n",
-    "            names.append(passenger.name)\n",
-    "        return names"
+    "    def passenger_names(self):\n"
    ]
   },
   {
