Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,7 +369,8 @@
     "# Define the NewDriver class\n",
     "class NewDriver:\n",
     "    \n",
-    "    def passenger_names(self):\n"
+    "    def passenger_names(self):\n",
+    "        "
    ]
   },
   {
