Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -370,7 +370,7 @@
     "class NewDriver:\n",
     "    \n",
     "    def passenger_names(self):\n",
-    "        return [i.name for i in self.passen]"
+    "        return [i.name for i in self.passengers]"
    ]
   },
   {
