--- a/index.ipynb
+++ b/index.ipynb
@@ -419,7 +419,7 @@
     "best_driver = NewDriver()\n",
     "\n",
     "# Add the name attribute and assign it 'Garol'\n",
-    "best\n",
+    "best_driver.name = ''\n",
     "\n",
     "# Add the car_make attribute and assign it 'toyota'\n",
     "\n",
