--- a/index.ipynb
+++ b/index.ipynb
@@ -419,10 +419,10 @@
     "best_driver = NewDriver()\n",
     "\n",
     "# Add the name attribute and assign it 'Garol'\n",
-    "best_driver.name = ''\n",
+    "best_driver.name = 'Garol'\n",
     "\n",
     "# Add the car_make attribute and assign it 'toyota'\n",
-    "\n",
+    "best_driv\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
     "\n",
