Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -422,7 +422,7 @@
     "best_driver.name = 'Garol'\n",
     "\n",
     "# Add the car_make attribute and assign it 'toyota'\n",
-    "best_driv\n",
+    "best_driver.car_make = 'to'\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
     "\n",
