--- a/index.ipynb
+++ b/index.ipynb
@@ -422,10 +422,10 @@
     "best_driver.name = 'Garol'\n",
     "\n",
     "# Add the car_make attribute and assign it 'toyota'\n",
-    "best_driver.car_make = 'to'\n",
+    "best_driver.car_make = 'toyota'\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
-    "\n",
+    "best_d\n",
     "\n",
     "# Add the age attribute and assign it 30\n",
     "\n",
