--- a/index.ipynb
+++ b/index.ipynb
@@ -425,10 +425,10 @@
     "best_driver.car_make = 'toyota'\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
-    "best_driver.car_model = 'cam'\n",
+    "best_driver.car_model = 'camry'\n",
     "\n",
     "# Add the age attribute and assign it 30\n",
-    "\n",
+    "best_driver.age = \n",
     "\n",
     "# Add the passengers attribute and assign it to list_of_passengers\n"
    ]
