--- a/index.ipynb
+++ b/index.ipynb
@@ -428,7 +428,7 @@
     "best_driver.car_model = 'camry'\n",
     "\n",
     "# Add the age attribute and assign it 30\n",
-    "best_driver.age = \n",
+    "best_driver.age = 30\n",
     "\n",
     "# Add the passengers attribute and assign it to list_of_passengers\n"
    ]
