--- a/index.ipynb
+++ b/index.ipynb
@@ -430,7 +430,8 @@
     "# Add the age attribute and assign it 30\n",
     "best_driver.age = 30\n",
     "\n",
-    "# Add the passengers attribute and assign it to list_of_passengers\n"
+    "# Add the passengers attribute and assign it to list_of_passengers\n",
+    "best_driver.passengers "
    ]
   },
   {
