--- a/index.ipynb
+++ b/index.ipynb
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
     "best_driver.age = 30\n",
     "\n",
     "# Add the passengers attribute and assign it to list_of_passengers\n",
-    "best_driver.passengers "
+    "best_driver.passengers = list_of_passengers"
    ]
   },
   {
