--- a/index.ipynb
+++ b/index.ipynb
@@ -451,7 +451,7 @@
    "outputs": [],
    "source": [
     "# Find the names of the passengers\n",
-    "names_of_passengers = best_driver. \n",
+    "names_of_passengers = best_driver.passenger \n",
     "print(names_of_passengers)"
    ]
   },
