--- a/index.ipynb
+++ b/index.ipynb
@@ -446,12 +446,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['alex', 'michelle', 'jake', 'ashleigh']\n"
+     ]
+    }
+   ],
    "source": [
     "# Find the names of the passengers\n",
-    "names_of_passengers = best_driver.passenger \n",
+    "names_of_passengers = best_driver.passenger_names() \n",
     "print(names_of_passengers)"
    ]
   },
